# AGI-AEF-Standard

./: .coverage  .coveragerc  .zenodo.json  CITATION.cff  CONTRIBUTING.md  INTEGRATION_GUIDE.md  README.md  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust-ci.yml  tests.yml
framework/: AGI-AEF-v1.0.0.md
rust/: Cargo.toml  Dockerfile  README.md
rust/examples/: basic_assessment.rs
rust/src/: lib.rs  main.rs
rust/src/api/: auth.rs  errors.rs  handlers.rs  middleware.rs  mod.rs  routes.rs
rust/src/assessment/: engine.rs  executor.rs  mod.rs  scoring.rs  test_suite.rs
rust/src/cli/: mod.rs
rust/src/ethics/: autonomous_vehicles.rs  financial.rs  medical.rs  mod.rs  validators.rs
rust/src/models/: config.rs  dimension.rs  explanation.rs  mod.rs  recommendation.rs
rust/src/monitoring/: dashboard.rs  metrics.rs  mod.rs  telemetry.rs
rust/src/regulatory/: ema.rs  fda.rs  mod.rs  nhtsa.rs  validators.rs
rust/src/tests/: mod.rs
tests/: README.md  __init__.py  conftest.py  test_agi_aef_result.py  test_assessment.py  test_cli.py  test_dimension_score.py  test_integration.py
tools/: agi_aef_assessment.py
